build: make telemetry dependency optional
Signed-off-by: Fred Bricon <fbricon@gmail.com>